# n9-spectral-sensing

./: .gitignore  LICENSE  README.md  config.yaml  example.ipynb  experiment.yaml  holder_state.json  pyproject.toml  single_board_examples.ipynb  testing.ipynb
firmware/spectral-sensor-board/src/: AS7341Array.cpp  AS7341Array.h  analog_out.h  main.cpp
firmware/spectral-sensor-plate/: platformio.ini
firmware/spectral-sensor-plate/src/: AS7341Array.cpp  AS7341Array.h  analog_out.cpp  main.cpp
part_files/: Conductive Plate (1.5mm copper).step  Measurement Rack.step  Sample Holder.step  Sample Rack.step  Sensor Window (3mm perspex).dxf
src/: data_analysis.py  data_parser.py  spectral_sensor.py
src/n9_controller/: __init__.py  coordinate_map.py  dispenser.py  experiment_config.py  experiment_runner.py  robot.py  state_machine.py
src/spectral_board_manager/: board_manager.py  cli.py  data_parser.py  plotter.py  spectral_sensor.py
